force-app/main/default/objects/Branch__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>What is the branch&apos;s address?</inlineHelpText>
    <label>Address</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>