force-app/main/default/objects/Branch__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <scale>7</scale>
    <type>Location</type>
</CustomField>