force-app/main/default/objects/Branch__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <defaultValue>&quot;https://events.slcpl.org/images/slideshow/slcpl/MainLibrary12.jpg&quot;</defaultValue>
    <inlineHelpText>Needs to be a jpg url for a photo of the library branch.</inlineHelpText>
    <label>Picture</label>
    <type>Url</type>
</CustomField>